--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
   "vue3snippets.importFirst": false,
   "vetur.validation.template": false,
   "vetur.format.enable": false,
-  "editor.defaultFormatter": null
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
