--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
